# argorixlang

./: .gitattributes  .gitignore  .zenodo.json  CITATION.cff  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  why.argx
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  dco.yml  security.yml
.opencode/: opencode.json
.opencode/prompts/: loop-build.md
conformance/: .gitignore  suite.v015.json  suite.v016.json  suite.v017.json  suite.v018.json  suite.v019.json  suite.v020.json  suite.v021.json  suite.v022.json  suite.v024.json  suite.v025.json  suite.v026.json  suite.v027.json  suite.v028.json  suite.v029.json  suite.v030.json  suite.v031.json  suite.v032.json  suite.v034.json  suite.v035.json  suite.v036.json  suite.v100.json  suite_min_v022.json
conformance/bytecode/: compat_v010.argbc.json  compat_v011.argbc.json  compat_v012.argbc.json  compat_v019.argbc.json  compat_v020.argbc.json  policy_v017.argbc.json  reactive_v013.argbc.json  reactive_v014.argbc.json  typed_messages_v018.argbc.json
conformance/sources/: allowlist_duplicate_capability.argx  allowlist_duplicate_target.argx  allowlist_incompatible_capability.argx  allowlist_unknown_capability.argx  allowlist_unknown_target.argx  atrust_boundary_v026.argx  atrust_credential_v028.argx  atrust_handshake_v029.argx  atrust_identity_v027.argx  bridge_contracts_v031.argx  capability_registry.argx  crypto_boundary.argx  crypto_registry.argx  dangerous_without_approval.argx  duplicate_feature_name.argx  duplicate_secret_name.argx  evidence_mapping_v032.argx  experimental_without_approval.argx  external_enabled.argx  external_feature_enabled.argx  external_missing_approval.argx  harness_duplicate_name.argx  harness_empty_attestation.argx  harness_feature_provider_mismatch.argx  harness_invalid_filesystem.argx  minimal_protocol.argx  (+46 more)
crates/argorix-vm/: Cargo.toml
crates/argorix-vm/src/: main.rs
crates/argorix-vm/tests/: evidence_cli.rs  security_report_cli.rs
crates/argorix_conformance/: Cargo.toml
crates/argorix_conformance/src/: lib.rs  main.rs  mutation.rs  runner.rs  types.rs  validation.rs  workspace.rs
crates/argorix_conformance/tests/: cli.rs  expected_failures.rs  mutation.rs  official_suite.rs  pipeline.rs  types.rs  validation.rs
crates/argorixc/: Cargo.toml
crates/argorixc/src/: main.rs
crates/argorixc/tests/: package_cli.rs
examples/: adapter_framework_v022.argbc.json  adapter_framework_v022.argx  adapter_min_v022.argx  adapter_profiles_v023.argbc.json  adapter_profiles_v023.argx  agent_passport_v019.argx  assert_unknown.argx  atrust_boundary_v026.argx  atrust_handshake_v029.argbc.json  atrust_handshake_v029.argx  bridge_contracts_v031.argbc.json  crypto_boundary_v025.argbc.json  crypto_registry_v024.argbc.json  emit_without_sends.argx  evidence_mapping_v032.argbc.json  facu_without_state_write.argx  failure_invalid_action.argx  failure_missing_trace.argx  feature_secret_boundary_v021.argbc.json  feature_secret_boundary_v021.argx  governance_mapping_v033.argx  halt_without_capability.argx  handler_without_receives.argx  intrinsic_wrong_binding.argx  invalid_bytecode_missing_end.argbc.json  invalid_capability.argx  marron_without_runtime_guard.argx  model_call_v08.argbc.json  model_call_v08.argx  model_invalid_provider.argx  model_invalid_provider_v010.argx  model_missing_capability.argx  model_restricted_without_approval.argx  model_unknown.argx  model_without_agent_permission.argx  model_wrong_binding.argx  policy_assertions_v09.argbc.json  policy_assertions_v09.argx  policy_v017.argbc.json  policy_v017.argx  (+50 more)
paper/: design-spec.md  implementation-plan.md
reports/: .gitignore
src/: lib.rs
tests/: compiler_tests.rs
(+629 files in other folders)
