[package]
name = "argorix-vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "argorix-vm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
argorix_bytecode.workspace = true
argorix_vm.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
